--- a/views/index.html
+++ b/views/index.html
@@ -5,80 +5,104 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/711c8550fc.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/estilos.css">
+
     <title>Mercado Liebre</title>
 </head>
 
-<body>
+<body class="home">
     <header>
+        <div class="main-header">
+            <div class="logo">
+                <img src="/images/logo-mercado-liebre.svg" alt="logo mercado liebre">
+            </div>
+            <div class="buscar">
+                <input type="search" placeholder="Buscar productos, marcas y más">
+                <button><i class="fab fa-sistrix"></i></button>
+            </div>
+
+            <p><i class="fas fa-hand-holding-usd"></i>Compra en cuotas y sin tarjeta de crédito</p>
+        </div>
         <nav>
-            <img src="/images/logo-mercado-liebre.svg" width="35%" alt="logo mercado liebre">
-
-            <form><input type="search" name="" id="">
-                <button type="submit">Buscar</button>
-            </form>
-
-            <h3>Compra en cuotas y sin tarjeta de crédito</h3>
             <ul>
                 <li><a href="">Ofertas</a></li>
                 <li><a href="">Tiendas Oficiales</a></li>
                 <li><a href="">Vender</a></li>
                 <li><a href="">Ayuda</a></li>
             </ul>
-
+            
             <ul>
-                <li><a href="">Creá tu cuenta</a></li>
-                <li><a href="">Ingresá</a></li>
-                <li><a href="">Mis Compras</a></li>
+                <li><a href="#">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
+                <li><a href="#">Ingresá<i class="fas fa-sign-in-alt"></i></a></li>
+                <li><a href="#">Mis Compras<i class="fas fa-shopping-basket"></i></a></li>
             </ul>
-
+            <button class="burguer-menu">
+                <i class="fas fa-bars"></i>
+            </button>
         </nav>
+
     </header>
 
     <main>
+        <section class="banner">
+            <img src="/images/img-home-banner.jpg" alt="Banner de promocion de MercadoPago" />
+        </section>
         <section>
+
             <h2>Basado en tu última vista</h2>
-            <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera-moulinex">
-            <p>$6.770</p>
-            <p>40% Off</p>
-            <h3>Cafetera Moulinex</h3><br>
-
-            <img src="/images/img-macbook-pro-2019.jpg" alt="laptop macbook-pro">
-            <p>$230.000</p>
-            <p>20% Off</p>
-            <h3>MacBook Pro 2019</h3><br>
-
-            <img src="/images/img-samsung-galaxy-s10.jpg" alt="celular samsung-s10">
-            <p>$70.000</p>
-            <p>10% Off</p>
-            <h3>Samsung Galaxy S10</h3><br>
-
-            <img src="/images/img-tv-samsung-smart.jpg" alt="smartv Samsung-43pulgadas">
-            <p>$70.000</p>
-            <p>10% Off</p>
-            <h3>Smartv Samsung 43"</h3><br>
+            <article>
+                <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera-moulinex">
+                <h3>$6.770</h3>
+                <h4>40% Off</h4>
+                <h4>Cafetera Moulinex</h4>
+            </article>
+            <article>
+                <img src="/images/img-macbook-pro-2019.jpg" alt="laptop macbook-pro">
+                <h3>$230.000</h3>
+                <h4>20% Off</h4>
+                <h4>MacBook Pro 2019</h4>
+            </article>
+            <article>
+                <img src="/images/img-samsung-galaxy-s10.jpg" alt="celular samsung-s10">
+                <h3>$70.000</h3>
+                <h4>10% Off</h4>
+                <h4>Samsung Galaxy S10</h4>
+            </article>
+            <article>
+                <img src="/images/img-tv-samsung-smart.jpg" alt="smartv Samsung-43pulgadas">
+                <h3>$70.000</h3>
+                <h4>10% Off</h4>
+                <h4>Smartv Samsung 43"</h4>
+            </article>
         </section>
 
         <section>
-            <h2>Sección de Ofertas</h2>
-            <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera-moulinex">
-            <p>$6.770</p>
-            <p>40% Off</p>
-            <h3>Cafetera Moulinex</h3><br>
-
-            <img src="/images/img-macbook-pro-2019.jpg" alt="laptop macbook-pro">
-            <p>$230.000</p>
-            <p>20% Off</p>
-            <h3>MacBook Pro 2019</h3><br>
-
-            <img src="/images/img-samsung-galaxy-s10.jpg" alt="celular samsung-s10">
-            <p>$70.000</p>
-            <p>10% Off</p>
-            <h3>Samsung Galaxy S10</h3><br>
-
-            <img src="/images/img-tv-samsung-smart.jpg" alt="smartv Samsung-43pulgadas">
-            <p>$70.000</p>
-            <p>10% Off</p>
-            <h3>Smartv Samsung 43"</h3><br>
+            <article>
+                <h2>Sección de Ofertas</h2>
+                <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera-moulinex">
+                <h3>$6.770</h3>
+                <h4>40% Off</h4>
+                <h4>Cafetera Moulinex</h4>
+            </article>
+            <article>
+                <img src="/images/img-macbook-pro-2019.jpg" alt="laptop macbook-pro">
+                <h3>$230.000</h3>
+                <h4>20% Off</h4>
+                <h4>MacBook Pro 2019</h4>
+            </article>
+            <article>
+                <img src="/images/img-samsung-galaxy-s10.jpg" alt="celular samsung-s10">
+                <h3>$70.000</h3>
+                <h4>10% Off</h4>
+                <h4>Samsung Galaxy S10</h4>
+            </article>
+            <article>
+                <img src="/images/img-tv-samsung-smart.jpg" alt="smartv Samsung-43pulgadas">
+                <h3>$70.000</h3>
+                <h4>10% Off</h4>
+                <h4>Smartv Samsung 43"</h4>
+            </article>
 
         </section>
 
@@ -86,16 +110,29 @@
     </main>
 
     <footer>
-        <h3>Pagá con tarjeta o en efectivo</h3>
-        <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-            puntos de pago. ¡Y siempre es seguro!</p>
-        <h3>Envío gratis desde $ 2.500</h3>
-        <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-            productos. Es un beneficio de Mercado Puntos.</p>
-        <h3>Seguridad, de principio a fin</h3>
-        <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-            porque estás siempre protegid@.</p>
-        <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+        <section>
+            <article class="pieinfo">
+                <i class="fas fa-credit-card fa-2x iconofooter"></i>
+                <h3>Pagá con tarjeta o en efectivo</h3>
+                <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                    puntos de pago. ¡Y siempre es seguro!</p>
+            </article>
+            <article class="pieinfo">
+                <i class="fas fa-gift fa-2x iconofooter"></i>
+                <h3>Envío gratis desde $ 2.500</h3>
+                <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                    productos. Es un beneficio de Mercado Puntos.</p>
+            </article>
+            <article class="pieinfo">
+                <i class="fas fa-user-shield fa-2x iconofooter"></i>
+                <h3>Seguridad, de principio a fin</h3>
+                <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                    porque estás siempre protegid@.</p>
+            </article>
+        </section>
+        <section>
+            <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
+        </section>
     </footer>
 </body>
 
