agregado estilos con css

--- a/views/index.html
+++ b/views/index.html
@@ -37,9 +37,9 @@
                 <li><a href="#">Ingresá<i class="fas fa-sign-in-alt"></i></a></li>
                 <li><a href="#">Mis Compras<i class="fas fa-shopping-basket"></i></a></li>
             </ul>
-            <button class="burguer-menu">
-                <i class="fas fa-bars"></i>
-            </button>
+          <button class="burguer-menu">
+            <i class="fas fa-bars"></i>
+        </button>
         </nav>
 
     </header>
@@ -130,7 +130,7 @@
                     porque estás siempre protegid@.</p>
             </article>
         </section>
-        <section>
+        <section class="copyrigth">
             <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
         </section>
     </footer>
