--- a/views/index.html
+++ b/views/index.html
@@ -31,17 +31,17 @@
                 <li><a href="">Vender</a></li>
                 <li><a href="">Ayuda</a></li>
             </ul>
-            
+
             <ul>
                 <li><a href="#">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
                 <li><a href="#">Ingresá<i class="fas fa-sign-in-alt"></i></a></li>
                 <li><a href="#">Mis Compras<i class="fas fa-shopping-basket"></i></a></li>
             </ul>
-          <button class="burguer-menu">
-            <i class="fas fa-bars"></i>
-        </button>
-        </nav>
 
+        </nav>
+        <div class="burguer-menu">
+            <button><i class="fa-solid fa-bars"></i></button>
+        </div>
     </header>
 
     <main>
