--- a/public/css/header.css
+++ b/public/css/header.css
@@ -22,16 +22,15 @@
 }
 .burguer-menu{
     text-align: center;
-    background-color: var(--celeste);
-    border-radius: 5px;
-     color: white;
-    margin: 0 0 5% 45%;
+    
 }
 
-.burguer-menu i{
-    font-size: 20px;
-    height: 40px;
-    padding: 10px;
-    width: 40px;
-
+.burguer-menu button{
+    background-color: var(--celeste);
+    color:white;
+    font-size: 25px;
+    margin-bottom: 20px;
+    border-radius: 7px;
+     width: 50px;
+    height: 50px;
 }
