--- a/views/index.html
+++ b/views/index.html
@@ -20,9 +20,9 @@
             <div class="buscar">
                 <input type="search" placeholder="Buscar productos, marcas y más">
                 <button><i class="fab fa-sistrix"></i></button>
-            </div>
+        </div>
 
-            <p><i class="fas fa-hand-holding-usd"></i>Compra en cuotas y sin tarjeta de crédito</p>
+            <p class="slogan"><i class="fas fa-hand-holding-usd"></i>Compra en cuotas y sin tarjeta de crédito</p>
         </div>
         <nav>
             <ul>
@@ -110,26 +110,32 @@
     </main>
 
     <footer>
+
         <section>
-            <article class="pieinfo">
-                <i class="fas fa-credit-card fa-2x iconofooter"></i>
-                <h3>Pagá con tarjeta o en efectivo</h3>
-                <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-                    puntos de pago. ¡Y siempre es seguro!</p>
-            </article>
-            <article class="pieinfo">
-                <i class="fas fa-gift fa-2x iconofooter"></i>
-                <h3>Envío gratis desde $ 2.500</h3>
-                <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-                    productos. Es un beneficio de Mercado Puntos.</p>
-            </article>
-            <article class="pieinfo">
-                <i class="fas fa-user-shield fa-2x iconofooter"></i>
-                <h3>Seguridad, de principio a fin</h3>
-                <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-                    porque estás siempre protegid@.</p>
-            </article>
+            <div id="card">
+                <i class="fas fa-credit-card fa-2x"></i>
+            </div>
+            <h3>Pagá con tarjeta o en efectivo</h3>
+            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                puntos de pago. ¡Y siempre es seguro!</p>
         </section>
+        <section>
+            <div id="card">
+                <i class="fas fa-gift fa-2x"></i>
+            </div>
+            <h3>Envío gratis desde $ 2.500</h3>
+            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                productos. Es un beneficio de Mercado Puntos.</p>
+        </section>
+        <section>
+            <div id="card">
+                <i class="fas fa-user-shield  fa-2x"></i>
+            </div>
+            <h3>Seguridad, de principio a fin</h3>
+            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                porque estás siempre protegid@.</p>
+        </section>
+
         <section class="copyrigth">
             <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
         </section>
