--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -21,7 +21,8 @@ footer section i {
     margin-bottom: 10px;
 
 }
-footer section h3,p{
+footer section h3,footer section p{
     color: var(--grisoscuro);
+
 }
 
