--- a/public/css/general.css
+++ b/public/css/general.css
@@ -2,12 +2,13 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-  
-    
+   
 }
+    
+
 
 
 body{
     font-family: var(--roboto);
-    font-size: 12px;
+    font-size: var(--cuerpo-de-texto);
 }
