--- a/views/index.html
+++ b/views/index.html
@@ -20,7 +20,7 @@
             <div class="buscar">
                 <input type="search" placeholder="Buscar productos, marcas y más">
                 <button><i class="fab fa-sistrix"></i></button>
-        </div>
+            </div>
 
             <p class="slogan"><i class="fas fa-hand-holding-usd"></i>Compra en cuotas y sin tarjeta de crédito</p>
         </div>
@@ -52,56 +52,97 @@
 
             <h2>Basado en tu última vista</h2>
             <article>
-                <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera-moulinex">
-                <h3>$6.770</h3>
-                <h4>40% Off</h4>
-                <h4>Cafetera Moulinex</h4>
+                <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera-moulinex" class="producto">
+                <div class="contenedor">
+                    <div class="camion">
+                        <i class="fas fa-truck"></i>
+                    </div>
+                    <h3 class="precio">$6.770</h3>
+                    <p class="descuento">40% Off</p>
+                    <h4>Cafetera Moulinex</h4>
+                </div>
+
             </article>
             <article>
-                <img src="/images/img-macbook-pro-2019.jpg" alt="laptop macbook-pro">
-                <h3>$230.000</h3>
-                <h4>20% Off</h4>
+                <img src="/images/img-macbook-pro-2019.jpg" alt="laptop macbook-pro" class="producto">
+                <div class="contenedor">
+                    <div class="camion">
+                        <i class="fas fa-truck"></i>
+                    </div>
+                <h3 class="precio">$230.000</h3>
+                <p class="descuento">20% Off</p>
                 <h4>MacBook Pro 2019</h4>
+                </div>
             </article>
             <article>
-                <img src="/images/img-samsung-galaxy-s10.jpg" alt="celular samsung-s10">
-                <h3>$70.000</h3>
-                <h4>10% Off</h4>
+                <img src="/images/img-samsung-galaxy-s10.jpg" alt="celular samsung-s10" class="producto">
+                <div class="contenedor">
+                    <div class="camion">
+                        <i class="fas fa-truck"></i>
+                    </div>
+                <h3 class="precio">$70.000</h3>
+                <p class="descuento">10% Off</p>
                 <h4>Samsung Galaxy S10</h4>
+                </div>
             </article>
             <article>
-                <img src="/images/img-tv-samsung-smart.jpg" alt="smartv Samsung-43pulgadas">
-                <h3>$70.000</h3>
-                <h4>10% Off</h4>
+                <img src="/images/img-tv-samsung-smart.jpg" alt="smartv Samsung-43pulgadas" class="producto">
+                <div class="contenedor">
+                    <div class="camion">
+                        <i class="fas fa-truck"></i>
+                    </div>
+                <h3 class="precio">$70.000</h3>
+                <p class="descuento">10% Off</p>
                 <h4>Smartv Samsung 43"</h4>
+                </div>
             </article>
         </section>
 
         <section>
             <article>
-                <h2>Sección de Ofertas</h2>
-                <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera-moulinex">
-                <h3>$6.770</h3>
-                <h4>40% Off</h4>
+                <h2>Ofertas</h2>
+                <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera-moulinex" class="producto">
+                <div class="contenedor">
+                    <div class="camion">
+                        <i class="fas fa-truck"></i>
+                    </div>
+                <h3 class="precio">$6.770</h3>
+                <p class="descuento">40% Off</p>
                 <h4>Cafetera Moulinex</h4>
+                </div>
             </article>
             <article>
-                <img src="/images/img-macbook-pro-2019.jpg" alt="laptop macbook-pro">
-                <h3>$230.000</h3>
-                <h4>20% Off</h4>
+                <img src="/images/img-macbook-pro-2019.jpg" alt="laptop macbook-pro" class="producto">
+                <div class="contenedor">
+                    <div class="camion">
+                        <i class="fas fa-truck"></i>
+                    </div>
+                <h3 class="precio">$230.000</h3>
+                <p class="descuento">20% Off</p>
                 <h4>MacBook Pro 2019</h4>
+                </div>
             </article>
             <article>
-                <img src="/images/img-samsung-galaxy-s10.jpg" alt="celular samsung-s10">
-                <h3>$70.000</h3>
-                <h4>10% Off</h4>
+                <img src="/images/img-samsung-galaxy-s10.jpg" alt="celular samsung-s10" class="producto">
+                <div class="contenedor">
+                    <div class="camion">
+                        <i class="fas fa-truck"></i>
+                    </div>
+                <h3 class="precio">$70.000</h3>
+                <p class="descuento">10% Off</p>
                 <h4>Samsung Galaxy S10</h4>
+                </div>
             </article>
             <article>
-                <img src="/images/img-tv-samsung-smart.jpg" alt="smartv Samsung-43pulgadas">
-                <h3>$70.000</h3>
-                <h4>10% Off</h4>
+                <img src="/images/img-tv-samsung-smart.jpg" alt="smartv Samsung-43pulgadas" class="producto">
+                <div class="contenedor">
+                    <div class="camion">
+                        <i class="fas fa-truck"></i>
+                    </div>
+                <h3 class="precio">$70.000</h3>
+                <p class="descuneto">10% Off</p>
                 <h4>Smartv Samsung 43"</h4>
+                </div>
             </article>
 
         </section>
