--- a/public/css/main.css
+++ b/public/css/main.css
@@ -44,33 +44,105 @@ main section h2 {
     color: var(--grisoscuro);
 }
 
-main section article h4 {
+.main{
+    width: 90%;
+    margin: 0 auto;
+}
+.banner img{
+    height: 13%;
+    width: 100vw;
     
-     display: none;
-    margin-top: 20px; 
-    font-size: var(--descuentoydescripcion);
-    color: var(--grisoscuro);
-   }
-
-   /* tablet */
-@media (min-width:461px){
-   
-    main section article{
-        box-shadow: 0 0 10px var(--grisoscuro);
-    }
-
-    main section article h4{
-    display:block;
-    }
-
-
+    display: none;
+}
+.main .productos img{
+    height: auto;
+    width: 90%;
+}
+.main section ul{
+    padding: 0;
+    margin-bottom: 0;  
+}
+.main section ul li{
+    background-color: white;
+    margin-bottom: 15px;
+    position: relative;
+}
+.divImg{
+    border-bottom: 1px solid var(--grisClaro);
+    display: flex;
+    justify-content: center;
+}
+.contenedor{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 0 15px 15px;
+}
+.camion{
+    padding: 5px;
+    font-size: 16px;
+    border: 2px solid var(--verde);
+    border-radius: 50%;
+    max-width: 30px;
+    color: var(--verde);
+    position: absolute;
+    right: 20px;
+    bottom: 50px;
+}
+.main section h3{
+    font-size: var(--descripciones);
+    margin: 10px 0 0;
+    color: var(--grisOscuro);
+    width: 250px;
+    font-weight: normal;
 }
 
-
-
-
+/* tablet */
+@media (min-width: 461px){
+    .main section ul li{
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    } 
+    main section ul li h3{
+        display: block;
+    }
+    .main section ul{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .main section ul li{
+        width: 48%;
+    }
+}
 
 /* desktop */
 @media (min-width:769px){
-
+    .main{
+        max-width: 1024px;
+    }
+    .main section ul{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .main section ul li{
+        width: 23%;
+    }
+    .camion{
+       right: 10px;
+       bottom: 85px;
+       font-size: 12px;
+       width: 25px;
+       padding: 3px;
+    }
+    .main section ul li .contenedor{
+        margin: 20px 10px 10px;
+        padding: 0;
+    }
+    .main section ul li .descuentos{
+        font-size: 15px;
+    }
+    .main section ul li .precios{
+        font-size: 17px;
+    }
 }
