--- a/views/index.html
+++ b/views/index.html
@@ -5,182 +5,183 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/711c8550fc.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/estilos.css">
-
     <title>Mercado Liebre</title>
+    <!-- font -->
+    <script src="https://kit.fontawesome.com/b19d58878c.js" crossorigin="anonymous"></script>
+    <!-- css -->
+    <link rel="stylesheet" href="/css/estilos.css">
 </head>
-
-<body class="home">
-    <header>
-        <div class="main-header">
-            <div class="logo">
-                <img src="/images/logo-mercado-liebre.svg" alt="logo mercado liebre">
+<body>
+    <header class="header">
+        <section>
+            <div class="top">
+                <div class="logo">
+                    <img src="/img/logo-mercado-liebre.svg" alt="logo de la pag">
+                </div>
+                
+                <div class="buscador">
+                    <input type="search" placeholder="Buscar productos, marcas" >
+                    <button type="button"><i class="fa-solid fa-magnifying-glass"></i></button>
+                </div>
             </div>
-            <div class="buscar">
-                <input type="search" placeholder="Buscar productos, marcas y más">
-                <button><i class="fab fa-sistrix"></i></button>
-            </div>
+           <h3><i class="fa-solid fa-hand-holding-dollar"></i>Comprá en cuotas y sin tarjeta de crédito</h3>
+        </section>
+    <nav>
+        <ul>
+            <li><a href="">Ofertas</a></li>
+            <li><a href="">Tiendas Oficiales</a></li>
+            <li><a href="">Vender</a></li>
+            <li><a href="">Ayuda</a></li>
+        </ul>
+        <ul>
+            <li><a href="">Creá tu cuenta</a> <i class="fa-solid fa-id-card"></i></li>
+            <li><a href="">Ingresá</a> <i class="fa-solid fa-right-to-bracket"></i></li>
+            <li><a href="">Mis compras</a> <i class="fa-solid fa-basket-shopping"></i></li>
+        </ul>
+    </nav>
 
-            <p class="slogan"><i class="fas fa-hand-holding-usd"></i>Compra en cuotas y sin tarjeta de crédito</p>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="">Ofertas</a></li>
-                <li><a href="">Tiendas Oficiales</a></li>
-                <li><a href="">Vender</a></li>
-                <li><a href="">Ayuda</a></li>
-            </ul>
+    <div class="hamburger">
+        <button><i class="fa-solid fa-bars"></i></button>
+    </div>
 
-            <ul>
-                <li><a href="#">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
-                <li><a href="#">Ingresá<i class="fas fa-sign-in-alt"></i></a></li>
-                <li><a href="#">Mis Compras<i class="fas fa-shopping-basket"></i></a></li>
-            </ul>
-
-        </nav>
-        <div class="burguer-menu">
-            <button><i class="fa-solid fa-bars"></i></button>
-        </div>
     </header>
 
-    <main>
-        <section class="banner">
-            <img src="/images/img-home-banner.jpg" alt="Banner de promocion de MercadoPago" />
-        </section>
-        <section>
+    <main class="main">
 
-            <h2>Basado en tu última vista</h2>
-            <article>
-                <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera-moulinex" class="producto">
-                <div class="contenedor">
-                    <div class="camion">
-                        <i class="fas fa-truck"></i>
-                    </div>
-                    <h3 class="precio">$6.770</h3>
-                    <p class="descuento">40% Off</p>
-                    <h4>Cafetera Moulinex</h4>
-                </div>
-
-            </article>
-            <article>
-                <img src="/images/img-macbook-pro-2019.jpg" alt="laptop macbook-pro" class="producto">
-                <div class="contenedor">
-                    <div class="camion">
-                        <i class="fas fa-truck"></i>
-                    </div>
-                <h3 class="precio">$230.000</h3>
-                <p class="descuento">20% Off</p>
-                <h4>MacBook Pro 2019</h4>
-                </div>
-            </article>
-            <article>
-                <img src="/images/img-samsung-galaxy-s10.jpg" alt="celular samsung-s10" class="producto">
-                <div class="contenedor">
-                    <div class="camion">
-                        <i class="fas fa-truck"></i>
-                    </div>
-                <h3 class="precio">$70.000</h3>
-                <p class="descuento">10% Off</p>
-                <h4>Samsung Galaxy S10</h4>
-                </div>
-            </article>
-            <article>
-                <img src="/images/img-tv-samsung-smart.jpg" alt="smartv Samsung-43pulgadas" class="producto">
-                <div class="contenedor">
-                    <div class="camion">
-                        <i class="fas fa-truck"></i>
-                    </div>
-                <h3 class="precio">$70.000</h3>
-                <p class="descuento">10% Off</p>
-                <h4>Smartv Samsung 43"</h4>
-                </div>
-            </article>
-        </section>
+        <div class="banner">
+            <img src="/img/img-home-banner.jpg" alt="img home banner">
+        </div>
 
         <section>
-            <article>
-                <h2>Ofertas</h2>
-                <img src="/images/img-cafetera-moulinex.jpg" alt="Cafetera-moulinex" class="producto">
+            <h2 class="titulares">Basado en tu última visita</h2>
+            <ul class="productos">
+                
+              <li>
+                <div class="divImg"><img src="/img/img-cafetera-moulinex.jpg" alt="img cafetera moulinex"></div>
+                
+                <div class="camion"><i class="fa-solid fa-truck"></i></div>
                 <div class="contenedor">
-                    <div class="camion">
-                        <i class="fas fa-truck"></i>
-                    </div>
-                <h3 class="precio">$6.770</h3>
-                <p class="descuento">40% Off</p>
-                <h4>Cafetera Moulinex</h4>
+                <p class="precios"> $6.770 </p>
+                <p class="descuentos"> 40% OFF</p>
+                <h3>Cafetera Moulinex</h3> 
                 </div>
-            </article>
-            <article>
-                <img src="/images/img-macbook-pro-2019.jpg" alt="laptop macbook-pro" class="producto">
-                <div class="contenedor">
-                    <div class="camion">
-                        <i class="fas fa-truck"></i>
-                    </div>
-                <h3 class="precio">$230.000</h3>
-                <p class="descuento">20% Off</p>
-                <h4>MacBook Pro 2019</h4>
-                </div>
-            </article>
-            <article>
-                <img src="/images/img-samsung-galaxy-s10.jpg" alt="celular samsung-s10" class="producto">
-                <div class="contenedor">
-                    <div class="camion">
-                        <i class="fas fa-truck"></i>
-                    </div>
-                <h3 class="precio">$70.000</h3>
-                <p class="descuento">10% Off</p>
-                <h4>Samsung Galaxy S10</h4>
-                </div>
-            </article>
-            <article>
-                <img src="/images/img-tv-samsung-smart.jpg" alt="smartv Samsung-43pulgadas" class="producto">
-                <div class="contenedor">
-                    <div class="camion">
-                        <i class="fas fa-truck"></i>
-                    </div>
-                <h3 class="precio">$70.000</h3>
-                <p class="descuneto">10% Off</p>
-                <h4>Smartv Samsung 43"</h4>
-                </div>
-            </article>
+                
+              </li>
 
+              <li>
+                <div class="divImg"><img src="/img/img-macbook-pro-2019.jpg" alt="img macbook pro 2019"></div>
+                
+                <div class="camion"><i class="fa-solid fa-truck"></i></div>
+                <div class="contenedor">
+                <p class="precios"> $230.000 </p>
+                <p class="descuentos"> 20% off</p>
+                <h3>MacBook Pro 2019</h3> 
+                </div>
+                
+              </li>
+
+              <li>
+                <div class="divImg"><img src="/img/img-samsung-galaxy-s10.jpg" alt="img samsung galaxy s10"></div>
+                
+                <div class="camion"><i class="fa-solid fa-truck"></i></div>
+                <div class="contenedor">
+                <p class="precios">$23.200 </p>
+                <p class="descuentos"> 5% off</p>
+                <h3>Samsung Galaxy S10</h3> 
+                </div>
+                
+              </li>
+
+              <li>
+                <div class="divImg">
+                    <img src="/img/img-tv-samsung-smart.jpg" alt="img tv samsung smart">
+                </div>
+                
+                <div class="camion"><i class="fa-solid fa-truck"></i></div>
+                <div class="contenedor">
+                <p class="precios">$70.500 </p>
+                <p class="descuentos"> 10% off</p>
+                <h3>SmartTv Samsung 43"</h3>
+                </div>
+              </li>
+            </ul>
         </section>
 
-
+        <section>
+            <h2 class="titulares">Ofertas</h2>
+            <ul class="productos">
+                
+                <li>
+                  <div class="divImg"><img src="/img/img-cafetera-moulinex.jpg" alt="img cafetera moulinex"></div>
+                  
+                  <div class="camion"><i class="fa-solid fa-truck"></i></div>
+                  <div class="contenedor">
+                  <p class="precios"> $6.770 </p>
+                  <p class="descuentos"> 40% OFF</p>
+                  <h3>Cafetera Moulinex</h3> 
+                  </div>
+                  
+                </li>
+  
+                <li>
+                  <div class="divImg"><img src="/img/img-macbook-pro-2019.jpg" alt="img macbook pro 2019"></div>
+                  
+                  <div class="camion"><i class="fa-solid fa-truck"></i></div>
+                  <div class="contenedor">
+                  <p class="precios"> $230.000 </p>
+                  <p class="descuentos"> 20% off</p>
+                  <h3>MacBook Pro 2019</h3> 
+                  </div>
+                  
+                </li>
+  
+                <li>
+                  <div class="divImg"><img src="/img/img-samsung-galaxy-s10.jpg" alt="img samsung galaxy s10"></div>
+                  
+                  <div class="camion"><i class="fa-solid fa-truck"></i></div>
+                  <div class="contenedor">
+                  <p class="precios">$23.200 </p>
+                  <p class="descuentos"> 5% off</p>
+                  <h3>Samsung Galaxy S10</h3> 
+                  </div>
+                  
+                </li>
+  
+                <li>
+                  <div class="divImg">
+                      <img src="/img/img-tv-samsung-smart.jpg" alt="img tv samsung smart">
+                  </div>
+                  
+                  <div class="camion"><i class="fa-solid fa-truck"></i></div>
+                  <div class="contenedor">
+                  <p class="precios">$70.500 </p>
+                  <p class="descuentos"> 10% off</p>
+                  <h3>SmartTv Samsung 43"</h3>
+                  </div>
+                </li>
+              </ul>
+        </section>
     </main>
+    <footer class="footer">
 
-    <footer>
+        <div>
+            <i class="fa-solid fa-credit-card"></i>
+           <h2>Pagá con tarjeta o en efectivo</h2>
+        <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+            puntos de pago. ¡Y siempre es seguro!</p>
+        </div>
+        <div>    <i class="fa-solid fa-gift"></i>
+           <h2>Envío gratis desde $ 2.500</h2>
+        <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+            productos. Es un beneficio de Mercado Puntos.</p>
+        </div>
+        <div>  <i class="fa-solid fa-user-shield"></i>
+           <h2>Seguridad, de principio a fin</h2>
+        <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+            porque estás siempre protegid@.</p> 
+        </div>
 
-        <section>
-            <div id="card">
-                <i class="fas fa-credit-card fa-2x"></i>
-            </div>
-            <h3>Pagá con tarjeta o en efectivo</h3>
-            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-                puntos de pago. ¡Y siempre es seguro!</p>
-        </section>
-        <section>
-            <div id="card">
-                <i class="fas fa-gift fa-2x"></i>
-            </div>
-            <h3>Envío gratis desde $ 2.500</h3>
-            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-                productos. Es un beneficio de Mercado Puntos.</p>
-        </section>
-        <section>
-            <div id="card">
-                <i class="fas fa-user-shield  fa-2x"></i>
-            </div>
-            <h3>Seguridad, de principio a fin</h3>
-            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-                porque estás siempre protegid@.</p>
-        </section>
-
-        <section class="copyrigth">
-            <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
-        </section>
+        <p id="copyright">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
     </footer>
 </body>
-
 </html>
