--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,76 +1,130 @@
-main {
+.main{
     width: 90%;
     margin: 0 auto;
-    padding: 20px 0;
 }
-
-main .banner img {
-
+.banner img{
+    height: 13%;
+    width: 100vw;
+    
     display: none;
 }
-
-main section article {
+.main .productos img{
+    height: auto;
+    width: 90%;
+}
+.main section ul{
+    padding: 0;
+    margin-bottom: 0;  
+}
+.main section ul li{
     background-color: white;
-    margin: 10px 0px;
+    margin-bottom: 15px;
+    position: relative;
 }
-main section article .contenedor{
-    border-top: 1px solid var(--grisclaro);
-    padding: 15px;
+.divImg{
+    border-bottom: 1px solid var(--grisClaro);
+    display: flex;
+    justify-content: center;
 }
-main section article img {
-    width: 100%;
+.contenedor{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 0 15px 15px;
 }
-
-main section article .camion i{
-    color: var(--verde);
-    padding: 10px;
-    border: solid 1px var(--verde);
+.camion{
+    padding: 5px;
+    font-size: 16px;
+    border: 2px solid var(--verde);
     border-radius: 50%;
-    font-size: var(--cuerpo-de-texto);
-}
-
-main section article .precio {
-    font-size: var(--precios);
-    color: var(--grisoscuro);
-}
-
-main section article .descuento {
-    font-size: var(--descuentoydescripcion);
+    max-width: 30px;
     color: var(--verde);
+    position: absolute;
+    right: 20px;
+    bottom: 50px;
 }
-
-main section h2 {
-    font-size: var(--titulares);
-    color: var(--grisoscuro);
-}
-
-main section article h4 {
-    
-     display: none;
-    margin-top: 20px; 
-    font-size: var(--descuentoydescripcion);
-    color: var(--grisoscuro);
-   }
-
-   /* tablet */
-@media (min-width:461px){
-   
-    main section article{
-        box-shadow: 0 0 10px var(--grisoscuro);
+@keyframes rotarCamion{
+    0%{
+        -webkit-animation: rotate3d(0, 0, 1, -0deg);
+        transform: rotate3d(0, 0, 1, -0deg);
     }
-
-    main section article h4{
-    display:block;
+    16.6%{
+        -webkit-animation: rotate3d(0, 0, 1, -30deg);
+        transform: rotate3d(0, 0, 1, -30deg);
     }
-
-
+    33.3%{
+        -webkit-animation: rotate3d(0, 0, 1, -60deg);
+        transform: rotate3d(0, 0, 1, -60deg);
+    }
+    50%{ 
+        -webkit-animation: rotate3d(0, 0, 1, -90deg);
+        transform: rotate3d(0, 0, 1, -90deg);
+    }
+}
+.camion:hover{
+    animation: rotarCamion 1.5s;
 }
 
+.main section h3{
+    font-size: var(--descripciones);
+    margin: 10px 0 0;
+    color: var(--grisOscuro);
+    width: 250px;
+    font-weight: normal;
+}
 
-
-
+/* tablet */
+@media (min-width: 461px){
+    .main section ul li{
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    } 
+    main section ul li h3{
+        display: block;
+    }
+    .main section ul{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .main section ul li{
+        width: 48%;
+    }
+}
 
 /* desktop */
 @media (min-width:769px){
-
+    .main{
+        max-width: 1024px;
+    }
+    .main section ul{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .main section ul li{
+        width: 23%;
+    }
+    .camion{
+       right: 10px;
+       bottom: 85px;
+       font-size: 16px;
+       width: 30px;
+       padding: 4px;
+    }
+    .main section ul li .contenedor{
+        margin: 20px 10px 10px;
+        padding: 0;
+    }
+    .main section ul li .descuentos{
+        font-size: 15px;
+    }
+    .main section ul li .precios{
+        font-size: 17px;
+    }
+}
+@media (min-width:854px){
+    .camion{
+        right: 10px;
+        bottom: 66px;
+    }
 }
