--- a/public/css/variables.css
+++ b/public/css/variables.css
@@ -1,18 +1,25 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap');
+
+:root{
+    --fuenteTipografico: 'Roboto', sans-serif;
+}
 
 
-:root {
+:root{
+    /* colores */
     --amarillo: #EAC926;
     --azul: #03264C;
     --celeste: #1259c3;
-    --grisoscuro: #666;
-    --grisclaro: #ebebeb;
+    --grisOscuro: #666;
+    --grisClaro: #ebebeb;
     --verde: #39b54a;
+    --blanco: white;
+    --rojo: red;
 
-    --roboto: 'Roboto', sans-serif;
-    --cuerpo-de-texto: 12px;
+    /* tipografias */
+    --cuerposDeTexto: 12px;
     --titulares: 24px;
     --precios: 18px;
-    --descuentoydescripcion: 16px;
-
+    --descuentos: 16px;
+    --descripciones: 16px;
 }
